--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -8,13 +8,13 @@
     <h3><u>Sign Up Coder</u></h3>
 
     <label for="name">Name</label>
-    <input type="text" placeholder="Name" id="name" [(ngModel)]="userName" [ngModelOptions]="{standalone: true}">
+    <input type="text" placeholder="Name" id="name" [(ngModel)]="userName" [ngModelOptions]="{standalone: true}"  required>
 
     <label for="username">Email</label>
-    <input type="email" placeholder="Email" id="username" [(ngModel)]="userEmail" [ngModelOptions]="{standalone: true}">
+    <input type="email" placeholder="Email" id="username" [(ngModel)]="userEmail" [ngModelOptions]="{standalone: true}" required>
 
     <label for="password">Password</label>
-    <input type="password" placeholder="Password" id="password" [(ngModel)]="userPassword" [ngModelOptions]="{standalone: true}">
+    <input type="password" placeholder="Password" id="password" [(ngModel)]="userPassword" [ngModelOptions]="{standalone: true}" required>
 
     <button id="login" type="submit">Sign Up</button>
     <div id="signup">Already a User ? <a routerLink="/login" routerLinkActive="active">Login</a></div>
