--- a/src/app/studfeed/studfeed.component.html
+++ b/src/app/studfeed/studfeed.component.html
@@ -12,7 +12,7 @@
     <img [src]="feed.logo" class="card-img-top" alt="facepic">
     <div class="card-body">
       <h5 class="card-title">{{feed.name}}</h5>
-      <p><u><b>Placed in {{feed.company}}</b></u></p>
+      <p><u><b>SDE @ {{feed.company}}</b></u></p>
       <p id="coursename"><b>Course :</b> {{feed.course}}</p>
       <p class="card-text">{{feed.feedback}}</p>
       <a [href]="feed.linkedin" target="_blank" class="btn"><i class="fa-brands fa-linkedin"></i></a>
