--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,10 +8,10 @@
     <h3><u>Welcome Coder</u></h3>
 
     <label for="username">Username</label>
-    <input type="email" placeholder="Email" id="username" [(ngModel)]="userEmail" [ngModelOptions]="{standalone: true}">
+    <input type="email" placeholder="Email" id="username" [(ngModel)]="userEmail" [ngModelOptions]="{standalone: true}" required="true">
 
     <label for="password">Password</label>
-    <input type="password" placeholder="Password" id="password" [(ngModel)]="userPassword" [ngModelOptions]="{standalone: true}">
+    <input type="password" placeholder="Password" id="password" [(ngModel)]="userPassword" [ngModelOptions]="{standalone: true}" required="true">
 
     <button id="login" type="submit">Log In</button>
     <div id="signup">Not a User ? <a routerLink="/signup" routerLinkActive="active">Sign Up</a></div>
